# Sarthak-AI-Agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  evaluation_report.md  package-lock.json  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  availability.py  booking.py  call.py  chat.py  health.py  vapi.py  voice.py
app/brain/: __init__.py  llm.py  persona.py  prompts.py
app/db/: __init__.py  database.py  models.py  seed.py
app/ingestion/: __init__.py  base.py  github_source.py  markdown_source.py  pipeline.py  resume.py  run_ingest.py
app/models/: __init__.py  api_schemas.py
app/rag/: __init__.py  bm25_index.py  chunking.py  embeddings.py  hybrid.py  reranker.py  retriever.py  schemas.py  vector_store.py
app/scheduling/: __init__.py  calendar.py
app/security/: __init__.py  grounding.py  prompt_guard.py
app/services/: __init__.py  vapi.py
app/tools/: __init__.py  availability.py  booking.py  registry.py
data/: about.md  experience.md  portfolio.md  projects.md
data/bm25/: .gitkeep  bm25_index.pkl
data/chroma/: .gitkeep
data/resume/: .gitkeep
docs/: BUILD_SPEC.md  RAILWAY_DEPLOYMENT.md  architecture.md  architecture.mmd
eval/: __init__.py  dataset.py  gold.example.json  metrics.py  run_eval.py
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/call-me/: route.ts
frontend/components/: call-me-modal.tsx
frontend/components/chat/: chat-area.tsx  chat-input.tsx  empty-state.tsx  formatted-text.tsx  message-bubble.tsx  message-list.tsx  quick-questions.tsx  typing-indicator.tsx
frontend/components/citations/: citation-card.tsx  citation-detail-panel.tsx  citations-list.tsx  source-badge.tsx
frontend/components/common/: backend-status-banner.tsx  error-state.tsx
frontend/components/layout/: app-shell.tsx  mobile-header.tsx
frontend/components/profile/: profile-card.tsx
frontend/components/scheduling/: booking-form.tsx  booking-success-modal.tsx  scheduling-card.tsx  slot-picker.tsx
frontend/components/settings/: health-status.tsx  settings-panel.tsx
frontend/components/sidebar/: sidebar.tsx
frontend/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  sheet.tsx  skeleton.tsx  sonner.tsx  textarea.tsx  tooltip.tsx
frontend/components/voice/: voice-button.tsx  voice-modal.tsx
frontend/hooks/: use-chat.ts  use-conversations.ts  use-health.ts  use-media-query.ts  use-voice.ts
frontend/lib/: api.ts  call-service.ts  constants.ts  parse.ts  storage.ts  utils.ts
frontend/types/: index.ts
scripts/: ingest.sh  run.sh
tests/: __init__.py  conftest.py  test_api.py  test_rag.py  test_security.py  test_tools.py  test_vapi.py
